• Adding progress bar on scroll • Adding ToTop button on scroll • Change naming of PleX

--- a/contributors.html
+++ b/contributors.html
@@ -29,9 +29,9 @@
                 </div>
 
                 <hr>
-                <h2>Wie hebben er aan PLEX gewerkt?</h2>
+                <h2>Wie hebben er aan PleX gewerkt?</h2>
                 <p><strong>Semester 3: O-PP3-O-PP301</strong></br>
-                    In de periode september 2021 tot en met januari 2022 zijn er zes deeltijdstudenten en twee docenten/coaches betrokken geweest bij het PLEX project. Gebruikersinteractie en Software zijn de twee voornaamste architectuurlagen waarmee gewerkt is door de
+                    In de periode september 2021 tot en met januari 2022 zijn er zes deeltijdstudenten en twee docenten/coaches betrokken geweest bij het PleX project. Gebruikersinteractie en Software zijn de twee voornaamste architectuurlagen waarmee gewerkt is door de
                     studenten.
                 </p>
 
