--- a/design.html
+++ b/design.html
@@ -29,7 +29,7 @@
                 </div>
 
                 <hr>
-                <p>Om de PLEX tool zo goed mogelijk op te leveren is er gebruik gemaakt van user research. Tevens is er een huisstijl ontwikkeld voor een unieke en consequente uitstraling van het PLEX project. Voor de toepassing van deze onderdelen zijn
+                <p>Om de PleX tool zo goed mogelijk op te leveren is er gebruik gemaakt van user research. Tevens is er een huisstijl ontwikkeld voor een unieke en consequente uitstraling van het PleX project. Voor de toepassing van deze onderdelen zijn
                     onderstaande bestanden beschikbaar.</p>
 
                 <h2>Research- & design resources:</h2>
