--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 </head>
 
 <body>
+    <!--progress bar-->
+    <div class="progress-container">
+        <div class="progress-bar" id="progress-indicator"></div>
+    </div>
 
     <!--Scroll to Top-->
-    <button id="toTop" title="Go to top"><span class="icon-intro"><ion-icon name="arrow-up-outline"></ion-icon></span></button>
+    <button onclick="topFunction()" id="toTop" title="Go to top"><span class="icon-intro"><ion-icon name="arrow-up-outline"></ion-icon></span></button>
     <!--container-->
     <div class="container">
         <!-- logo / navigation -->
@@ -39,10 +43,6 @@
             </div> -->
             <!--content-->
             <div class="intro-page sub-page">
-                <!--progress bar-->
-                <!-- <div class="progress-container">
-                    <div class="progress-bar" id="progress-indicator" style="background: #6200d9;"></div>
-                </div> -->
                 <a id="intro"></a>
                 <div class="sub-header">
                     <h1>Product Requirements Document</h1>
@@ -51,7 +51,7 @@
 
                 <hr>
                 <h2>Intro en doel</h2>
-                <p>Dit product requirements document is bedoeld om de overdraagbaarheid / opvolging van het PLEX project zo efficiënt mogelijk te laten verlopen, zodat gedurende de ontwikkeling en uitbreiding van het project meerdere teams en individuen
+                <p>Dit product requirements document is bedoeld om de overdraagbaarheid / opvolging van het PleX project zo efficiënt mogelijk te laten verlopen, zodat gedurende de ontwikkeling en uitbreiding van het project meerdere teams en individuen
                     onafhankelijk van elkaar hieraan kunnen werken.</p>
 
                 <h3>Stakeholder:</h3>
@@ -67,7 +67,7 @@
                 <img class="separator" src="../img/seperator.svg" alt="Seperator image" />
 
                 <a id="who"></a>
-                <h3 class="sub-heading-blue">Voor wie is PLEX bedoeld?</h3>
+                <h3 class="sub-heading-blue">Voor wie is PleX bedoeld?</h3>
                 <p><strong>Fontys Projectleiders (PLOU)</strong> De projectleiders zijn verantwoordelijk voor het samenstellen en beheren van de projecten en om deze vervolgens te koppelen aan- en te delen met de studenten.</p>
 
                 <p><strong>Studenten van Fontys</strong></br>
@@ -76,20 +76,20 @@
                 <img class="separator" src="../img/seperator.svg" alt="Seperator image" />
 
                 <a id="why"></a>
-                <h3 class="sub-heading-blue">Waarom een PLEX tool ontwikkelen?</h3>
-                <p>Er zijn verschillende redenen om de PLEX tool te ontwikkelen:</p>
+                <h3 class="sub-heading-blue">Waarom een PleX tool ontwikkelen?</h3>
+                <p>Er zijn verschillende redenen om de PleX tool te ontwikkelen:</p>
 
                 <ol>
                     <li><strong>Verbeteren van de usability voor projectleiders en studenten</strong></br>
-                        Uit gebruikersonderzoek is gebleken dat het momenteel tijdrovend is en omslachtig werkt om projecten te selecteren en te presenteren aan studenten. De PLEX tool kan hierin verbetering leveren door vanuit één centraal punt e.a. te beheren. Daarnaast zal
+                        Uit gebruikersonderzoek is gebleken dat het momenteel tijdrovend is en omslachtig werkt om projecten te selecteren en te presenteren aan studenten. De PleX tool kan hierin verbetering leveren door vanuit één centraal punt e.a. te beheren. Daarnaast zal
                         een gebruiksvriendelijke user interface hieraan ook een positieve bijdrage leveren.</li>
                     </br>
                     <li><strong>Kennis en expertise = Optimaal resultaat!</strong></br>
-                        Het PLEX project kan vanuit meerdere architectuurlagen aangevlogen worden. Zowel Media Design (front-end) en Software (back-end) spelen een belangrijke rol in de ontwikkeling van de tool. Maar op de lange termijn kan ook Business aansluiten in de verdere
+                        Het PleX project kan vanuit meerdere architectuurlagen aangevlogen worden. Zowel Media Design (front-end) en Software (back-end) spelen een belangrijke rol in de ontwikkeling van de tool. Maar op de lange termijn kan ook Business aansluiten in de verdere
                         ontwikkeling van het project. Samen vormen de architectuurlagen een denktank waarin kennis en expertise met elkaar kunnen worden uitgewisseld, om zo tot een optimaal resultaat te komen!</li>
                     </br>
                     <li><strong>Toekomstbestendig</strong></br>
-                        PLEX is een lange termijn project dat continue aan verandering onderhevig is; er zijn nieuwe wensen, er komen andere functionaliteiten bij, er worden andere mensen / partners bij betrokken etc. Het PLEX project is dus niet zomaar iets eenmaligs, maar
+                        PleX is een lange termijn project dat continue aan verandering onderhevig is; er zijn nieuwe wensen, er komen andere functionaliteiten bij, er worden andere mensen / partners bij betrokken etc. Het PleX project is dus niet zomaar iets eenmaligs, maar
                         je werkt aan een tool waar gebruikers echt iets aan hebben en waar altijd aan gewerkt kan worden.
                     </li>
                 </ol>
@@ -99,7 +99,7 @@
                 <a id="what"></a>
                 <h3 class="sub-heading-blue">Hoe ziet de tool er uit?</h3>
                 <p>Laatste update: <strong>10-01-2022</strong></p>
-                <p>De PLEX tool is een zogenaamde webportal welke bestaat uit verschillende weergaven. Elke weergave bestaat uit diverse functionaliteiten die o.a. aansluiten bij de wensen van de doelgroep (projectleiders of studenten). De tool is momenteel
+                <p>De PleX tool is een zogenaamde webportal welke bestaat uit verschillende weergaven. Elke weergave bestaat uit diverse functionaliteiten die o.a. aansluiten bij de wensen van de doelgroep (projectleiders of studenten). De tool is momenteel
                     alleen ontwikkeld voor desktop.
                 </p>
 
