• Adding ProgressBar & ToTop to all pages

--- a/code.html
+++ b/code.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+    <!--progress bar-->
+    <div class="progress-container">
+        <div class="progress-bar" id="progress-indicator"></div>
+    </div>
+    <!--Scroll to Top-->
+    <button onclick="topFunction()" id="toTop" title="Go to top"><span class="icon-intro"><ion-icon name="arrow-up-outline"></ion-icon></span></button>
     <!--container-->
     <div class="container">
         <!-- logo / navigation -->
